clear project and create simple app without launcher